--- a/jdk-8/onbuild/Dockerfile
+++ b/jdk-8/onbuild/Dockerfile
@@ -3,6 +3,8 @@ FROM maven:3-jdk-8
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-ONBUILD ADD . /usr/src/app
+ONBUILD COPY *pom.xml /usr/src/app/
+ONBUILD RUN mvn dependency:get
 
+ONBUILD ADD . /usr/src/app
 ONBUILD RUN mvn install
